added exception handler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,8 @@ spring.jpa.database=postgresql
 spring.jpa.open-in-view=false
 
 graphql.servlet.mapping=/student-service
+graphql.graphiql.enabled=true
+graphql.graphiql.mapping=/graphiql
+graphql.graphiql.endpoint.graphql=/student-service
+graphql.servlet.exception-handlers-enabled=false
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
